# VelocityDM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
.github/workflows/: build.yml  ci.yml
extension/: background.js  manifest.json  popup.html  popup.js
src/: main.cpp
src/browser_bridge/: NativeHost.cpp  manifest.json
src/core/: Downloader.cpp  Downloader.h  FileIO.cpp  FileIO.h  SegmentWorker.cpp  SegmentWorker.h  StateManager.cpp  StateManager.h
src/ui/: MainWindow.cpp  MainWindow.h  resource.rc
